@@ -101,14 +101,16 @@ class CapTest(EnvironmentTest):
 
         logging.basicConfig(level = logging.INFO)
 
+        self.trajname = make_trajectory_name(self)
+
         self.filename = make_temp_file(os.path.join('experiments',
                                                     'tests',
                                                     'HDF5',
-                                                    'test.hdf5'))
+                                                    '%s.hdf5' % self.trajname))
         self.logfolder = make_temp_file(os.path.join('experiments','tests','Log'))
 
         random.seed()
-        self.trajname = make_trajectory_name(self)
+
 
         env = Environment(trajectory=self.trajname,filename=self.filename,
                           file_title=self.trajname, log_folder=self.logfolder,
